# napi

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  LICENSE_EE  README.md  SUPPORT.md  USERS.md  WEEKLY_UPDATE_LOG.md  deno.json  eslint.config.mjs  index.js  package-lock.json  package.json  test-run.js  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint_and_test.yml  lint_test_build.yml  lint_test_compile.yml  release.yml
.zed/: settings.json
CLA/: CORPORATE_CONTRIBUTOR_LICENSE_AGREEMENT.md  INDIVIDUAL_CONTRIBUTOR_LICENSE_AGREEMENT.md
examples/: README.md
examples/express/: .napirc  package-lock.json
examples/express-typescript/: package-lock.json  package.json  tsconfig.json
examples/nestjs-typescript/: .napirc  package-lock.json  package.json
examples/python/flask/: .napirc  app.py  pyproject.toml
examples/python/flask/api/data/: elves.py  hobbits.py
examples/python/flask/api/services/: elves.py  hobbits.py
examples/python/flask/api/views/: elves.py  hobbits.py
examples/python/flask/api/wizards/: data.py  services.py  views.py
examples/python/flask/napi-output/api/views/: hobbits.py
install_scripts/: install.ps1  install.sh
media/: README.md
scripts/: bump_version.ts  get_version.ts
src/: compiler.ts  file-operations.js  index.ts  utils.js
src/api/: index.ts  scan.ts  split.ts  sync.ts  types.ts
src/app/: package.json  (+2 more)
test-api/: api.js  package.json  service.js
(+192 files in other folders)
